[project]
name = "msgr"
version = "0.5.3"
description = "Minimal multi-platform channel mailbox CLI (Slack, Telegram) for LLM agents and scripts"
requires-python = ">=3.11"

[project.optional-dependencies]
telegram = ["telethon>=1.36"]
listen = ["websocket-client>=1.7"]

[project.scripts]
msgr = "msgr:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["msgr"]
